# axum-graphql

./: .env  .rustfmt.toml  Cargo.toml  Makefile  README.md  build.rs  rust-toolchain.toml
.sqlx/: query-71f9e011773e86d96c2dd77d76d8360cc9f430de1960cee25da292556aee369d.json
dockers/postgres_only/: docker-compose.yaml
dockers/postgres_with_jaeger/: docker-compose.yaml
migrations/: seed_elixir.sql
migrations/bookstore/: 0001_create_books_table.sql  0002_todos.sql  0003_add_metadata_on_book.sql
migrations/elixir/: 001_init_tables.sql
notes/: learn_graphql.md  learn_graphql_with_axum.md  learn_sqlx.md
postgres_and_jaeger/: docker-compose.yaml
src/: command_line.rs  main.rs
src/db/: bookstore.rs  mod.rs
src/graphql/: elixir.rs  mod.rs
src/model/: mod.rs
src/observability/: metrics.rs  tracing.rs
src/routes/: mod.rs
