[package]
name = "axum-graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0.188", features = ["derive"] }
async-graphql = "6.0.6"
async-graphql-axum = "6.0.6"
metrics = "0.21.1"
metrics-exporter-prometheus = "0.12.1"
